--- a/git/remote.html
+++ b/git/remote.html
@@ -4,17 +4,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Commandes Git Distantes</title>
+    <title>Installation de Git</title>
     <!-- CSS de Bootstrap -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Votre CSS personnalisé -->
-    <link rel="stylesheet" href="git.css">
+    <link rel="stylesheet" href="../git.css">
 </head>
 
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="images/ghlogo.png" alt="Logo Git et Github"></a>
+            <a class="navbar-brand" href="index.html"><img src="../images/ghlogo.png" alt="Logo Git et Github"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -22,28 +22,50 @@
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav">
                     <li class="nav-item">
-                        <a class="nav-link" href="index.html">Accueil</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="glossary.html">Glossaire</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="https://github.com/Whitos/evalgit"  target="_blank">Dépot GitHub</a>
+                        <a class="nav-link active" aria-current="page" href="../index.html">Accueil</a>
                     </li>
                     <li class="nav-item dropdown">
                         <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
                             data-bs-toggle="dropdown" aria-expanded="false">
-                            Sections
+                            Sections GIT
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
                             <li><a class="dropdown-item" href="install.html">Installer Git</a></li>
+                            <li><a class="dropdown-item" href="commandes.html">Commandes de base</a></li>
                             <li><a class="dropdown-item" href="branches.html">Gestion des branches</a></li>
                             <li><a class="dropdown-item" href="remote.html">Commandes distantes</a></li>
                             <li><a class="dropdown-item" href="security.html">SSH et sécurité</a></li>
                         </ul>
                     </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Sections Github 
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="../github/install.html">Installer Github</a></li>
+                            <li><a class="dropdown-item" href="../github/repositories.html">Gestion des repositories</a></li>
+                            <li><a class="dropdown-item" href="../github/commands.html">Commandes Git</a></li>
+                            <li><a class="dropdown-item" href="../github/collaboration.html">Collaboration et Pull Requests</a></li>
+                        </ul>
+                    </li>
+                    <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" role="button"
+                            data-bs-toggle="dropdown" aria-expanded="false">
+                            Sections VSCode
+                        </a>
+                        <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+                            <li><a class="dropdown-item" href="../vscode/install.html">Installer Visual Studio Code</a></li>
+                            <li><a class="dropdown-item" href="../vscode/extensions.html">Extensions et Plugins</a></li>
+                            <li><a class="dropdown-item" href="../vscode/shortcuts.html">Raccourcis Clavier</a></li>
+                            <li><a class="dropdown-item" href="../vscode/debugging.html">Débogage</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
+            <li class="nav-item text-end">
+                <a class="nav-link" href="https://github.com/Whitos/evalgit"  target="_blank">Dépot GitHub</a>
+            </li>
         </div>
     </nav>
 
