--- a/index.html
+++ b/index.html
@@ -75,38 +75,41 @@
             <div class="row text-center">
                 <div class="col-md-4 d-flex align-items-stretch mb-4 mb-md-0">
                     <section class="d-flex flex-column align-items-center">
-                        <img src="images/git.png" alt="Git Logo" class="img-fluid mb-4 section-logo">
+                        <img src="images/git.png" alt="Git Logo" width="150px" class="img-fluid mb-4 section-logo">
                         <br>
                         <br>
                         <h2 class="text-primary">Technologie Qui Fait La Différence</h2>
-                        <h1><span class="text-primary">Git</span>: Le Système de Contrôle de Version Idéal pour Tous Vos Projets</h1>
+                        <h1><span class="text-primary">Git</span>: Le Système de Contrôle de Version Idéal</h1>
+                        <br>
                         <p>Git est un système de contrôle de version distribué, gratuit et open source, conçu pour gérer tout, des petits aux très grands projets, avec rapidité et efficacité.</p>
                         <div class="mt-auto">
-                            <a href="#" class="btn btn-outline-light">En Savoir Plus</a>
+                            <a href="git/install.html" class="btn btn-outline-light">En Savoir Plus</a>
                         </div>
                     </section>
                 </div>
                 <div class="col-md-4 d-flex align-items-stretch mb-4 mb-md-0">
                     <section class="d-flex flex-column align-items-center">
-                        <img src="images/github-logo.png" alt="GitHub Logo" class="img-fluid mb-4 section-logo">
+                        <img src="images/github-logo.png" alt="GitHub Logo" width="150px" class="img-fluid mb-4 section-logo">
                         <br>
                         <h2 class="text-primary">La Plateforme de Développement</h2>
                         <h1><span class="text-primary">GitHub</span>: Où le Monde Construit des Logiciels</h1>
+                        <br>
                         <p>GitHub est une plateforme de développement inspirée par la manière dont vous travaillez. Du code ouvert aux entreprises, vous pouvez héberger et réviser du code, gérer des projets, et construire des logiciels aux côtés de millions d'autres développeurs.</p>
                         <div class="mt-auto">
-                            <a href="#" class="btn btn-outline-light">En Savoir Plus</a>
+                            <a href="github/install.html" class="btn btn-outline-light">En Savoir Plus</a>
                         </div>
                     </section>
                 </div>
                 <div class="col-md-4 d-flex align-items-stretch mb-4 mb-md-0">
                     <section class="d-flex flex-column align-items-center">
-                        <img src="images/vscode-logo.png" alt="Visual Studio Code Logo" class="img-fluid mb-4 section-logo">
+                        <img src="images/vscode-logo.png" alt="Visual Studio Code Logo" width="100px" class="img-fluid mb-4 section-logo">
                         <br>
                         <h2 class="text-primary">L'éditeur de Code Source</h2>
-                        <h1><span class="text-primary">Visual Studio Code</span>: Votre Outil de Développement Complet</h1>
+                        <h1><span class="text-primary">VSCode</span>: Votre Outil de Développement Complet</h1>
+                        <br>
                         <p>Visual Studio Code est un éditeur de code source gratuit, optimisé pour la création et le débogage d'applications modernes. Il supporte une grande variété de langages de programmation et d'extensions, ce qui en fait l'outil de choix pour les développeurs.</p>
                         <div class="mt-auto">
-                            <a href="#" class="btn btn-outline-light">En Savoir Plus</a>
+                            <a href="vscode/install.html" class="btn btn-outline-light">En Savoir Plus</a>
                         </div>
                     </section>
                 </div>
