--- a/git/install.html
+++ b/git/install.html
@@ -14,7 +14,7 @@
 <body>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <div class="container-fluid">
-            <a class="navbar-brand" href="index.html"><img src="../images/ghlogo.png" alt="Logo Git et Github"></a>
+            <a class="navbar-brand" href="../index.html"><img src="../images/ghlogo.png" alt="Logo Git et Github"></a>
             <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Basculer la navigation">
                 <span class="navbar-toggler-icon"></span>
