--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
                             Sections Github 
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="github/install.html">Installer Github</a></li>
-                            <li><a class="dropdown-item" href="branches.html">Gestion des repistories</a></li>
-                            <li><a class="dropdown-item" href="remote.html">Commandes</a></li>
-                            <li><a class="dropdown-item" href="security.html">SSH et sécurité</a></li>
+                            <li><a class="dropdown-item" href="github/install.html">Installer GitHub</a></li>
+                            <li><a class="dropdown-item" href="github/repositories.html">Gestion des repositories</a></li>
+                            <li><a class="dropdown-item" href="github/actions.html">GitHub Actions</a></li>
+                            <li><a class="dropdown-item" href="github/collaboration.html">Collaboration et Pull Requests</a></li>
                         </ul>
                     </li>
                     <li class="nav-item dropdown">
@@ -54,10 +54,10 @@
                             Sections VSCode
                         </a>
                         <ul class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                            <li><a class="dropdown-item" href="install.html">Installer Visual Studio Code</a></li>
-                            <li><a class="dropdown-item" href="branches.html">Gestion des branches</a></li>
-                            <li><a class="dropdown-item" href="remote.html">Commandes distantes</a></li>
-                            <li><a class="dropdown-item" href="security.html">SSH et sécurité</a></li>
+                            <li><a class="dropdown-item" href="vscode/install.html">Installer Visual Studio Code</a></li>
+                            <li><a class="dropdown-item" href="vscode/extensions.html">Extensions et Plugins</a></li>
+                            <li><a class="dropdown-item" href="vscode/shortcuts.html">Raccourcis Clavier</a></li>
+                            <li><a class="dropdown-item" href="vscode/debugging.html">Débogage</a></li>
                         </ul>
                     </li>
                 </ul>
