--- a/git/commandes.html
+++ b/git/commandes.html
@@ -70,8 +70,8 @@
     </nav>
 
     <div class="container-fluid d-flex align-items-center justify-content-center vh-100">
-        <div class="container">
-            <h1 class="mb-5 text-center">commandes Git et Github</h1>
+        <div class="container animate__animated animate__fadeInDown">
+            <h1 class="mb-5 text-center">Commandes Git et Github</h1>
             <p class="lead  mb-5 text-center">Cette section est en cours de construction. Nous ajoutons continuellement
                 de nouveaux termes
                 et commandes.</p>
