--- a/git/install.html
+++ b/git/install.html
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet">
     <!-- Votre CSS personnalisé -->
     <link rel="stylesheet" href="../git.css">
+    <!-- Animate.css -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -70,7 +72,7 @@
     </nav>
 
     <div class="container-fluid d-flex align-items-center justify-content-center vh-100">
-        <div class="container text-center">
+        <div class="container text-center animate__animated animate__fadeInDown">
             <h1 class="mb-5 text-center">Installer Git</h1>
             <p class="lead mb-5 text-center">Suivez ces étapes pour installer et configurer Git sur votre système.</p>
             <div class="mb-3">
@@ -93,7 +95,6 @@
             </div>
         </div>
     </div>
-
 
     <!-- Bundle JS de Bootstrap avec Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"></script>
