--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="git.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
 </head>
 
 <body>
@@ -68,13 +69,11 @@
         </div>
     </nav>
 
-    
-
     <main class="d-flex align-items-center justify-content-center vh-100">
         <div class="container">
             <div class="row text-center">
                 <div class="col-md-4 d-flex align-items-stretch mb-4 mb-md-0">
-                    <section class="d-flex flex-column align-items-center">
+                    <section class="d-flex flex-column align-items-center animate__animated animate__fadeInLeft">
                         <img src="images/git.png" alt="Git Logo" width="150px" class="img-fluid mb-4 section-logo">
                         <br>
                         <br>
@@ -88,7 +87,7 @@
                     </section>
                 </div>
                 <div class="col-md-4 d-flex align-items-stretch mb-4 mb-md-0">
-                    <section class="d-flex flex-column align-items-center">
+                    <section class="d-flex flex-column align-items-center animate__animated animate__fadeInLeft">
                         <img src="images/github-logo.png" alt="GitHub Logo" width="150px" class="img-fluid mb-4 section-logo">
                         <br>
                         <h2 class="text-primary">La Plateforme de Développement</h2>
@@ -101,7 +100,7 @@
                     </section>
                 </div>
                 <div class="col-md-4 d-flex align-items-stretch mb-4 mb-md-0">
-                    <section class="d-flex flex-column align-items-center">
+                    <section class="d-flex flex-column align-items-center animate__animated animate__fadeInLeft">
                         <img src="images/vscode-logo.png" alt="Visual Studio Code Logo" width="100px" class="img-fluid mb-4 section-logo">
                         <br>
                         <h2 class="text-primary">L'éditeur de Code Source</h2>
@@ -116,9 +115,6 @@
             </div>
         </div>
     </main>
-
-
-    
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
